# hh_vacancy

./: README.md  main.py  pyproject.toml
src/: configuration.py  connector.py  currency_hh_api.py  hh_api.py  user_usage.py  vacancies.py
tests/: test_vacancy.py
